Add Green and Gold design with video implementation
- Implement new Green and Gold color scheme replacing amber/orange
- Add video assets (Croissant and Cupcake) to timeline section
- Fix video deployment issue by moving videos to src/assets
- Remove 'Не можете да ни посетите?' section from Stores page
- Update all components with new storefront color palette
- Add comprehensive documentation in Claude.md
- Configure Vercel for video asset deployment
- Update button styles and navigation with green/gold gradients

--- a/vercel.json
+++ b/vercel.json
@@ -17,6 +17,13 @@
       }
     },
     {
+      "src": "/(.*\\.(mp4|webm|ogg|avi|mov))",
+      "headers": {
+        "cache-control": "s-maxage=31536000,immutable",
+        "content-type": "video/mp4"
+      }
+    },
+    {
       "src": "/(.*)",
       "dest": "/index.html"
     }
